--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Home</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quibusdam magni atque, dolor id recusandae illum praesentium ex porro! Dolorum perspiciatis blanditiis odio, quibusdam eaque qui. Repudiandae temporibus deserunt numquam.</p>
 </body>
 </html>
